--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <a href='#pinky-prototype' title='pinkyPrototype'>Pinky prototype</a>
     <a href='#pinky-battlebot' title='pinkyBattlebot'>Pinky the battlebot</a>
     <a href='#code' title='code'>Code</a>
+    <a href="#video" title="video">Video</a>
 </nav>
 <header>
-    Pinky in the making
+    Pinky the robot
 </header>
 <main>
     <section id="pushy-robots" class="container">
@@ -38,11 +39,11 @@
             Here are some pictures of Pinky.
         </p>
         <div class="image-container">
-            <img src="includes/pinkyPrototypeFront.jpeg">
-            <img src="includes/pinkyPrototypeWheel.jpeg">
-            <img src="includes/pinkyPrototypeInside.jpeg">
-            <img src="includes/pinkyPrototypeTail.jpeg">
-            <img src="includes/pinkyPrototypeWires.jpeg">
+            <img src="includes/pinkyPrototypeFront.jpeg" alt="pinky prototype front">
+            <img src="includes/pinkyPrototypeWheel.jpeg" alt="pinky prototype wheel">
+            <img src="includes/pinkyPrototypeInside.jpeg" alt="pinky prototype inside">
+            <img src="includes/pinkyPrototypeTail.jpeg" alt="pinky prototype tail">
+            <img src="includes/pinkyPrototypeWires.jpeg" alt="pinky prototype wires">
         </div>
     </section>
     <section id="pinky-battlebot" class="container">
@@ -60,14 +61,14 @@
             Overall, Pinky is a very cute but powerful battlebot.
         </p>
         <div class="image-container">
-            <img src="includes/pinkyFront.jpeg">
-            <img src="includes/pinkyBack.jpeg">
-            <img src="includes/pinkyInside.jpeg">
+            <img src="includes/pinkyFront.jpeg" alt="pinky the robot front">
+            <img src="includes/pinkyBack.jpeg" alt="pinky the robot back">
+            <img src="includes/pinkyInside.jpeg" alt="pinky the robot inside">
         </div>
     </section>
     <section id="code" class="container">
         <h1>Code</h1>
-        <img class="code-pic" src="includes/pinkyPrototypeCode.png">
+        <img class="code-pic" src="includes/pinkyPrototypeCode.png" alt="pinky prototype code">
         <p>
             This is the code for prototype-Pinky.
             I made this code in MakeCode from Adafruit industries and I put it on the Circuit Playground Express (CPE).
@@ -75,12 +76,19 @@
             I only used the touch sensors as input.
             I wrote it in blocks, because I didn't know Javascript yet.
         </p>
-        <img class="code-pic" src="includes/pinkyCode.png">
+        <img class="code-pic" src="includes/pinkyCode.png" alt="pinky the robot code">
         <p>
             This is the code for Pinky the battlebot.
             This time I was able to make it in Javascript and that was a lot easier and there were also more options.
             I worked with the light sensor and the touch sensor as input.
         </p>
+    </section>
+    <section id="video" class="container">
+        <div class="video">
+            <iframe width="500" height="315"
+                    src="https://youtube.com/embed/16WtcEZCQec">
+            </iframe>
+        </div>
     </section>
 </main>
 
